<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0a0454"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MainActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_weight="10"
                android:background="@drawable/gradient"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="cursive"
                    android:text="@string/jack"
                    android:textColor="#fff"
                    android:textSize="30sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/net_price"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <EditText
                        android:paddingBottom="2dp"
                        android:paddingTop="5dp"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="3dp"
                        android:textColor="#110481"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:id="@+id/resultArea"
                        android:background="@color/white"
                        android:hint="0.0"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_margin="8dp"
                        android:textColor="#000"
                        android:textSize="35sp"
                        android:text="@string/tk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
 />


                <EditText
                    android:id="@+id/priceArea"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/gradient2"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal"
                    android:paddingLeft="20dp"
                    android:textColor="#fff"
                    android:textColorHint="#c9b7b7"
                    android:textCursorDrawable="@color/white" />

                <EditText
                    android:id="@+id/discountArea"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/gradient2"
                    android:hint="@string/product_discount"
                    android:inputType="numberDecimal"
                    android:paddingLeft="20dp"
                    android:textColor="#fff"
                    android:textColorHint="#c9b7b7"
                    android:textCursorDrawable="@color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/calculateBtn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#120840"
                        android:padding="12dp"
                        android:text="@string/calculate"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/ClearBtn"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:background="#120840"
                        android:padding="12dp"
                        android:text="@string/clear"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"
                android:layout_weight="2"
                android:background="@drawable/gradient">

                <ImageView
                    android:scaleType="fitXY"
                    android:src="@drawable/add"
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


</LinearLayout>